css/quiz.css
.game-logo {
    align-self: center;
    width: 30rem;
    margin-bottom: 3rem;
}

/* QUESTIONS */
.choice-container {
    display: flex;
    margin-bottom: 0.5rem;
    width: 100%;
    font-size: 1.8rem;
    border: 0.1rem solid var(--accent-green);
    background-color: white;
    align-items: stretch;
    flex-direction: row-reverse;
}
.choice-container:hover {
    cursor: pointer;
    box-shadow: 0 0.4rem 1.4rem 0 var(--hover-green);
    transform: translateY(-0.1rem);
    transition: transform 150ms;
}
.inactive + .choice-prefix {
    background-color:  #961b6f;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}
.correctTag + .choice-prefix {
    background-color: var(--accent-green);
}

.choice-prefix {
    display: flex;
    padding: 0 2.5rem;
    background-color: var(--main-green);
    color: white;
    margin: 0;
}

.choice-text {
    width: 100%;
    padding: 1.5rem;
    /* border: 2px solid gold; */

}

.inactive {
    background: linear-gradient(to right, rgb(206, 205, 205), white);
}

.selected {
    background: linear-gradient(to right, rgb(185, 193, 218), white);
    box-shadow: 0 0.4rem 1.4rem 0 var(--hover-green);
    transform: translateY(-0.2rem);

}

.correct {
    background: linear-gradient(to right, var(--main-green), white);
    color: white;
    font-weight: bold;
    -webkit-text-stroke-width: 0.7px;
    -webkit-text-stroke-color: black;
}

.incorrect {
    background: linear-gradient(to right, #b32084, white);
    color: white;
    font-weight: bold;
    -webkit-text-stroke-width: 0.7px;
    -webkit-text-stroke-color: black;

}



/* HUD */
.hud {
    display: flex;
    justify-content: space-between;
}

.hud-prefix {
    text-align: center;
    font-size: 2rem;
    margin-bottom: 1rem;
}

#progress-text {
    margin-top: 1.5rem;
}

#progress-bar {
    width: 100%;
    height: 4rem;
    border: 0.3rem solid var(--main-green);
}

#progress-bar-full {
    height: 3.4rem;
    background-color: var(--main-green);
    width: 0%;
}

.visualizer-section {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    /* border: 0.5rem solid var(--main-green); */
    width: 70%;
    height: 100%;
}

.visualizer {
    width: 90%;
    height: 1rem;
    /* border: 0.3rem solid var(--accent-green); */
}
/* .visualizer:first-of-type{
    margin-top: 2%;
}
.visualizer:last-child {
    margin-bottom: 2%;
} */
.vis-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin: 0.25% 0;
    padding: 0;
}
.vis-label{
    margin-right: 1%;
    font-size: 1.6rem;
    margin: 0;
    padding: 0;
}
.visualizer-full {
    /* background: linear-gradient(to right, var(--main-green), white); */
    background-color: var(--accent-green);
    height: 100%;
    margin-left: 2%;
    padding: 0;
}
/* #visualizer-text-a, #visualizer-text-b, #visualizer-text-c, #visualizer-text-d {
    align-self: flex-end;
    justify-self: flex-end;
} */

/* THINGS THAT MAKE GOOGLE SUBMIT WORK */
#submit-button {
    visibility: hidden;
}
input {
    cursor: pointer;
    visibility: hidden;
    z-index: -1;
}

